[metadata]
name = orion
packages =
    orion
    orion.losses
    orion.analyzers
    orion.loggers
    orion.utils
    orion.models
    orion.trainers
    orion.evaluators

version = 1.0.0
description = Orion Python libraries and scripts.
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
setup_requires = 
    build==0.10.0
install_requires =
    pandas==1.5.3
    scipy==1.9.1
    torch >=1.13.1
    
zip_safe = False
include_package_data = True
